# abs

./: .gitignore  Cargo.toml
.cargo/: xp7.toml
.github/workflows/: rust.yml
console/: Cargo.toml  CargoXP.toml  build.rs  buildXP.rs
console/src/: collective.rs  kurir_ng.rs  main.rs
deals/: Cargo.toml
deals/src/: main.rs
draw/: Cargo.toml
draw/src/: main.rs
launcabs/: Cargo.toml  CargoXP.toml  build.rs  buildXP.rs
launcabs/src/: log_window.rs  main.rs  manager.rs  new.rs
launchng/: Cargo.toml  CargoXP.toml  build.rs  buildXP.rs
launchng/resources/: resources.res  resources_coff.res  resources_coff_i686.res  resources_coff_x86_64.res
launchng/src/: about.rs  core.rs  func_main.rs  login.rs  main.rs  manager.rs  version_info.rs
libabsho/: Cargo.toml  CargoXP.toml  build.rs  buildXP.rs
libabsho/src/: lib.rs
live/: Cargo.toml
live/src/: main.rs
loginweb/: Cargo.toml
loginweb/src/: main.rs
multi/: Cargo.toml  CargoXP.toml  build.rs  buildXP.rs
multi/src/: collective.rs  main.rs
runtime/: Cargo.toml
runtime/src/: crypt.rs  food.rs  lib.rs  login.rs  prepare.rs  prepare_ext.rs  product.rs  task.rs  task_ng.rs  telegram.rs  telemetry.rs  upgrade.rs  voucher.rs
runtime/src/multi/: task.rs
savevoucher/: Cargo.toml  CargoXP.toml  build.rs  buildXP.rs
savevoucher/src/: main.rs
updater/: Cargo.toml  CargoXP.toml  build.rs  buildXP.rs
updater/src/: main.rs
video/: Cargo.toml
video/src/: main.rs
