[workspace]
members = [
    "runtime",
    "console",
    "launcabs",
    "video", "live", "savevoucher", "launchng", "libabsho", "draw", "updater", "multi"]
resolver = "2"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = "fat"          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "symbols"
