[workspace]
members = [
    "runtime",
    "console",
    "launcabs",
    "video", "live", "savevoucher", "launchng", "libabsho", "draw", "updater", "multi"]
resolver = "2"

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
lto = true                  # reduces binary size by ~14%
opt-level = "z"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times