[package]
name = "abs"
version = "0.10.2"
edition = "2021"
authors = ["Paijo"]
description = "Auto Buy from Shopee.co.id"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Auto Buy from Shopee.co.id"
LegalCopyright = "By Paijo"
OriginalFilename = "abs.exe"
CompanyName = "Paijo"

[dependencies]
runtime = { path = "../runtime" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1.0"
structopt = "0.3"
crossterm = "0.28.1"
ctrlc = "3.4.5"
num_cpus = "1.16"
futures = "0.3"
windows-sys = "0.59.0"
