[package]
name = "abs"
version = "1.2.1"
edition = "2024"
authors = ["Paijo"]
description = "Auto Buy from Shopee.co.id"
build = "build.rs"

[build-dependencies]
winresource = "0.1"
chrono = "0.4"

[package.metadata.winresource]
FileDescription = "Auto Buy from Shopee.co.id"
LegalCopyright = "By Paijo"
OriginalFilename = "abs.exe"
CompanyName = "Paijo"

[dependencies]
runtime = { path = "../runtime", features = ["prepare-ext", "core", "checkout", "checkout_ng"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1.0"
structopt = "0.3"
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console"] }
