[package]
name = "deals"
version = "1.2.5"
edition = "2024"
authors = ["Paijo"]
description = "Food Deals"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Food Deals"
LegalCopyright = "By Paijo"
OriginalFilename = "FoodDeals.exe"
CompanyName = "Paijo"

[dependencies]
runtime = { path = "../runtime", features = ["core"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
structopt = "0.3"
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }