[package]
name = "launchng"
version = "0.10.3"
edition = "2021"
authors = ["Paijo"]
description = "Launcher NG for ABS"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Launcher NG for ABS"
LegalCopyright = "By Paijo"
OriginalFilename = "launcher2ng.exe"
CompanyName = "Paijo"

[dependencies]
winsafe = { version = "0.0.22", features = ["gui", "kernel"] }
tokio = { version = "1", features = ["full"] }
runtime = { path = "../runtime" }
serde_json = "1"
chrono = "0.4"
windows-version = "0.1.1"
image = "0.25.5"
base64 = "0.13"
