[package]
name = "launchng"
version = "1.2.7"
edition = "2024"
authors = ["Paijo"]
description = "Launcher NG for ABS"
build = "build.rs"

[build-dependencies]
winresource = "0.1"
chrono = "0.4"

[package.metadata.winresource]
FileDescription = "Launcher NG for ABS"
LegalCopyright = "By Paijo"
OriginalFilename = "launcher2ng.exe"
CompanyName = "Paijo"

[dependencies]
winsafe = { git = "https://github.com/cari-404/winsafe.git", features = ["gui", "kernel", "advapi", "shell"] }
tokio = { version = "1", features = ["full"] }
runtime = { path = "../runtime", features = ["prepare-ext", "flashsale", "core", "upgrade"] }
serde_json = "1"
chrono = "0.4"
windows-version = "0.1.1"
base64 = "0.13"
futures-util = "0.3"
windows = { version = "0.59", features = [
    "Win32_Graphics_GdiPlus",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_UI",
    "Win32_UI_Shell",
] }