[package]
name = "libabsho"
version = "1.2.2"
edition = "2024"
authors = ["Paijo"]
description = "Runtime library for ABS & Complement"
build = "build.rs"

[build-dependencies]
winresource = "0.1"
chrono = "0.4"

[package.metadata.winresource]
FileDescription = "Runtime library for ABS & Complement"
LegalCopyright = "By Paijo"
OriginalFilename = "libabsho.dll"
CompanyName = "Paijo"

[lib]
crate-type = ["cdylib"]

[dependencies]
runtime = { path = "../runtime", features = ["core", "checkout", "checkout_ng"] }
tokio = { version = "1", features = ["full"] }
