[package]
name = "runtime"
version = "1.0.4"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
rquest = { version = "1.5.5", features = ["gzip", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.13"
byteorder = "1.4"
rand = "0.8"
urlencoding = "2.1.3"
futures = "0.3"
rayon = "1.10"
once_cell = "1.21"