[package]
name = "runtime"
version = "1.0.7"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
prepare-ext = ["checkout", "futures"]
core = ["rand", "uuid"]
checkout = []
checkout_ng = ["futures", "rayon", "dashmap"]
flashsale = []
food = []
upgrade = []

[dependencies]
futures = { version = "0.3", optional = true }
rayon = { version = "1.10", optional = true }
dashmap = { version = "6.1", optional = true }
rquest = { version = "1.5.5", features = ["gzip", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"], optional = true }
base64 = "0.13"
byteorder = "1.4"
rand = { version = "0.8", optional = true }
urlencoding = "2.1.3"
once_cell = "1.21"