[package]
name = "savevoucher"
version = "1.2.3"
edition = "2021"
authors = ["Paijo"]
description = "Save Voucher"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Save Voucher"
LegalCopyright = "By Paijo"
OriginalFilename = "claimshopee.exe"
CompanyName = "Paijo"

[dependencies]
runtime = { path = "../runtime" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
indicatif = "0.17"
atty = "0.2.14"
windows-version = "0.1.0"
structopt = "0.3"
num_cpus = "1.16"
windows-sys = "0.59.0"