[package]
name = "updater"
version = "1.0.1"
edition = "2024"

[dependencies]
rquest = { version = "1.5.5", features = ["gzip", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
indicatif = "0.17"
futures-util = "0.3"
once_cell = "1.21"

[target.'cfg(windows)'.dependencies]
zip = "2.5.0"
windows-version = "0.1.1"

[target.'cfg(unix)'.dependencies]
tar = "0.4"
flate2 = "1.0"